# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  ruff.toml
.github/workflows/: pyci.yml
brain_games/: cli.py
brain_games/scripts/: brain-games.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
